istio/demo/deploy-flask-dump-header.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dump-header
  namespace: istio-demo
  labels:
    "app.kubernetes.io/name": "dump-header"
spec:
  replicas: 1
  selector:
    matchLabels:
      "app.kubernetes.io/name": "dump-header"
  template:
    metadata:
      labels:
        "app.kubernetes.io/name": "dump-header"
    spec:
      containers:
        - name: dump-header
          image: rajmor/flask-dump-headers:v0.1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
          livenessProbe:
            httpGet:
              path: "/"
              port: 5000
          readinessProbe:
            httpGet:
              path: "/"
              port: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: dump-header
  namespace: istio-demo
  labels:
    "app.kubernetes.io/name": "dump-header"
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    "app.kubernetes.io/name": "dump-header"
  type: ClusterIP
